<resources>

    <string name="app_name">Missing Settings</string>
    <string name="selective_rotation_enabled">Selective rotation</string>
    <string name="selective_rotation_explanation">Rotate only when the phone is unlocked</string>
    <string name="proximity_lock_enabled">Proximity lock</string>
    <string name="proximity_lock_explanation">Keep the phone locked in close contact</string>
    <string name="uninstall">Uninstall</string>
    <string name="proximity_lock_denied">Proximity sensor is obscured, please remove the obstacle and try again.</string>
    <string name="ok">OK</string>
    <string name="how_to_uninstall">Touch and hold the button to uninstall</string>

</resources>